# ROS2-Tutorial-Medium-Part1

./: CMakeLists.txt  LICENSE  README.md
Simulation Notes/: IGN- plugins-list.txt  IGN-GZ bridging node pairs.txt  Terminal Commands Package Dev.txt  as2_codes.txt
ign_pkg_v1/: CMakeLists.txt  package.xml
ign_pkg_v1/launch/: ign_pkg_v1.launch.py  qc_ign.launch.py
ign_pkg_v1/models/quadcopter/: model.sdf
ign_pkg_v1/worlds/: world.sdf
models/quadcopter/: model.sdf
